[package]
name = "misskey-webp-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
image = "0.25.1"

[dev-dependencies]
rstest = "0.19.0"
pretty_assertions = "=1.4.0"
