[package]
name = "misskey-webp-proxy"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of Misskey Media Proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
image = "0.25.1"
libwebp-sys = "0.9"
axum = "0.7.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.4", features = ["derive"] }

[dev-dependencies]
rstest = "0.19.0"
pretty_assertions = "=1.4.0"
