[package]
name = "misskey-webp-proxy"
version = "1.0.3"
edition = "2021"
description = "Rust implementation of Misskey Media Proxy"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12" }
url = "2.5"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
image = "0.25.1"
libwebp-sys = "0.9"
axum = "0.7.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.4", features = ["derive", "env"] }
http = "1.1.0"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
usvg = "0.41.0"
resvg = "0.41.0"
tiny-skia = "0.11.4"

[dev-dependencies]
rstest = "0.19.0"
pretty_assertions = "=1.4.0"
